[project]
name = "timestream-cleaner"
dynamic = ["version"]
description = "Amazon Timestream Database Table Cleanup Tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Julio Batista Silva", email = "python@juliobs.com" }]
license = { text = "MIT" }
keywords = ["aws", "timestream", "database", "cleanup", "cleaner", "cli", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://juliobs.com/project/timestream-cleaner"
Documentation = "https://github.com/jbsilva/timestream-cleaner#readme"
Repository = "https://github.com/jbsilva/timestream-cleaner"
CI = "https://github.com/jbsilva/timestream-cleaner/actions"
Issues = "https://github.com/jbsilva/timestream-cleaner/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/timestream_cleaner/__init__.py"
