[project]
name = "timestream-cleaner"
version = "0.1.0"
description = "Amazon Timestream Database Table Cleanup Tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Julio Batista Silva", email = "python@juliobs.com" }]
license = { text = "MIT" }
keywords = ["aws", "timestream", "database", "cleanup", "cleaner", "cli", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = []
